Choose a note in the sequencer , next add able disable button

--- a/frontend/src/Components/Beat/beat.css
+++ b/frontend/src/Components/Beat/beat.css
@@ -65,7 +65,14 @@
 }
 
 .note{
-	width: 1px;
-	height: 2px;
+	width: 5px;
+	height: 13px;
 	border: 1px solid black;
+}
+
+.mute {
+	width: 13px;
+	height: 13px;
+	border: 1px solid black;
+	border-radius: 10px;
 }
