--- a/frontend/src/Components/Beat/beat.css
+++ b/frontend/src/Components/Beat/beat.css
@@ -70,9 +70,13 @@
 	border: 1px solid black;
 }
 
-.mute {
-	width: 13px;
-	height: 13px;
+.mute{
+	width: 5px;
+	height: 5px;
 	border: 1px solid black;
-	border-radius: 10px;
+	border-radius: 3px;
+}
+
+.muteHighlighted {
+	background-color: greenyellow
 }
